fix: Hover links on dark mode

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,8 +15,8 @@
 	--cream-color: #5a5a5a;
 	--black-color: #fff;
 	--hover-color: rgba(255, 255, 255, 0.6) ;
-	--sidebar-hover: rgba(169, 169, 169, 0.473);
-	--blue-link-color: #4040fc;
+	--sidebar-hover: #3d3b3b;
+	--blue-link-color: #e3e3e3;
 }
 * {
 	margin: 0;
